--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand titulo" href="#">Estrena Siempre...<br>Alquiler de vestidos de fiesta y complementos</a>
+        <a class="navbar-brand titulo" href="#">"Estrena Siempre..."<br>Alquiler de vestidos de fiesta y complementos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -139,7 +139,9 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Dónde estamos:</h2>
             <p class="lead">Estrena Siempre esta situada en Plaza Constitución 2, Valdepeñas 13300 (Ciudad Real), o también nos puedes visitarnos en 
-              <a target="_blank" href="#">www.estranasiempre.com</a>.</p>
+              <a target="_blank" href="#">www.estrenasiempre.com</a>.</p>
+              <p>Tlf contacto: 926258960</p>
+              <p>Móvil: 650214028</p>
           </div>
           <div class="col-lg-5 mr-auto ">
             <img class="img-fluid" src="img/mapa.PNG" alt="">
@@ -153,19 +155,20 @@
     <!-- /.content-section-a -->
 
     <aside class="banner">
+        
 
       <div class="container">
 
         <div class="row">
           <div class="col-lg-6 my-auto">
-            <h2>Connect to Start Bootstrap:</h2>
+            <h2><br><br>Síguenos en:</h2>
           </div>
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
                 <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                  <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                    <span class="network-name">Facebook</span>
                 </a>
               </li>
               <li class="list-inline-item">
@@ -176,8 +179,8 @@
               </li>
               <li class="list-inline-item">
                 <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-linkedin fa-fw"></i>
-                  <span class="network-name">Linkedin</span>
+                  <i class="fa fa-envelope" aria-hidden="true"></i>
+                  <span class="network-name">Email</span>
                 </a>
               </li>
             </ul>
@@ -195,19 +198,19 @@
       <div class="container">
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Home</a>
+            <a href="#">Quiénes somos</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#about">About</a>
+            <a href="#about">Colecciones</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#services">Services</a>
+            <a href="#services">Dónde estamos / Horario</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#contact">Contact</a>
+            <a href="#contact">Contacto</a>
           </li>
         </ul>
         <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
