--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             </li>
             <li class="list-inline-item">
               <a href="#" class="btn btn-secondary btn-lg">
-                <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
+                <i class="fa fa-camera" aria-hidden="true"></i>
+                <span class="network-name">INSTAGRAM</span>
               </a>
             </li>
             <li class="list-inline-item">
@@ -113,7 +113,8 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Consigue tu look ideal</h2>
               <p class="lead" id="texto2">Ven a nuestra tienda.<br>Te asesoramos en tu decisión.<br>Una vez elegido el vestido, llévatelo a casa ¿listo para usar!<br>Al devolverlo, nosotros nos encargamos de la tintoreria, y te devolvemos la fianza que pagaste al principio, siempre que el vestido no haya sufrido ningún desperfecto.</p>
-              <button type="button" class="btn btn-warning">Ver colecciones</button>
+              <!--<buttom type="button" class="btn btn-warning">Ver colecciones</buttom>-->
+              <a href="colecciones.html">Ver colecciones</a>
                 
           </div>
             
@@ -142,6 +143,7 @@
               <a target="_blank" href="#">www.estrenasiempre.com</a>.</p>
               <p>Tlf contacto: 926258960</p>
               <p>Móvil: 650214028</p>
+              <p>Email:lopera@gmail.com</p>
           </div>
           <div class="col-lg-5 mr-auto ">
             <img class="img-fluid" src="img/mapa.PNG" alt="">
@@ -161,7 +163,7 @@
 
         <div class="row">
           <div class="col-lg-6 my-auto">
-            <h2><br><br>Síguenos en:</h2>
+            <h2><br><br>Visítanos en:</h2>
           </div>
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
@@ -173,8 +175,8 @@
               </li>
               <li class="list-inline-item">
                 <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
+                  <i class="fa fa-camera" aria-hidden="true"></i>
+                  <span class="network-name">INSTAGRAM</span>
                 </a>
               </li>
               <li class="list-inline-item">
