--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand titulo" href="#">"Estrena Siempre..."<br>Alquiler de vestidos de fiesta y complementos</a>
+       <a class="navbar-brand titulo" href="#">"Estrena Siempre..."<br>Alquiler de vestidos de fiesta y complementos</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">Estrena Siempre</a>
+              <a class="nav-link" href="#estrenasiempre">Estrena Siempre</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Colecciones</a>
+              <a class="nav-link" href="#colecciones">Colecciones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+              <a class="nav-link" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -59,21 +59,21 @@
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
+              <a href="https://es-es.facebook.com/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 <span class="network-name">FACEBOOK</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
+              <a href="https://www.instagram.com/?hl=es" class="btn btn-secondary btn-lg">
                 <i class="fa fa-camera" aria-hidden="true"></i>
                 <span class="network-name">INSTAGRAM</span>
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#" class="btn btn-secondary btn-lg">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span class="network-name">EMAIL</span>
+              <a href="https://plus.google.com/discover?hl=es-419" class="btn btn-secondary btn-lg">
+                <i class="fa fa-google-plus" aria-hidden="true"></i>
+                <span class="network-name">Google</span>
               </a>
             </li>
           </ul>
@@ -86,7 +86,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-lg-12 ml-auto">
+          <div id="estrenasiempre" class="col-lg-12 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">¿Tienes un evento especial? Consigue un look diferente para cada ocasión</h2>
@@ -108,7 +108,7 @@
       <div class="container">
 
         <div class="row letra">
-          <div class="col-lg-6 mr-auto order-lg-2">
+          <div id="colecciones" class="col-lg-6 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Consigue tu look ideal</h2>
@@ -135,14 +135,15 @@
       <div class="container">
 
         <div class="row">
-          <div class="col-lg-5 ml-auto">
+          <div id="contacto" class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Dónde estamos:</h2>
             <p class="lead">Estrena Siempre esta situada en Plaza Constitución 2, Valdepeñas 13300 (Ciudad Real), o también nos puedes visitarnos en 
               <a target="_blank" href="#">www.estrenasiempre.com</a>.</p>
-              <p>Tlf contacto: 926258960</p>
-              <p>Móvil: 650214028</p>
+              <div class="hidden-sm-up"><a href="tel: +34">600111222</a></div>
+              <div class="hidden-xs-down">Telefono: 600111222</div> <!-- el hidden-sm-up y el hidden-xs-down se ponen para que cuando sea movil se pueda llamar directamente, y cuando sea pantalla se ponga normal-->
+              
               <p>Email:lopera@gmail.com</p>
           </div>
           <div class="col-lg-5 mr-auto ">
@@ -168,21 +169,21 @@
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://es-es.facebook.com/" class="btn btn-secondary btn-lg">
                   <i class="fa fa-facebook-official" aria-hidden="true"></i>
                     <span class="network-name">Facebook</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://www.instagram.com/?hl=es" class="btn btn-secondary btn-lg">
                   <i class="fa fa-camera" aria-hidden="true"></i>
                   <span class="network-name">INSTAGRAM</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-envelope" aria-hidden="true"></i>
-                  <span class="network-name">Email</span>
+                <a href="https://plus.google.com/discover?hl=es-419" class="btn btn-secondary btn-lg">
+                  <i class="fa fa-google-plus" aria-hidden="true"></i>
+                  <span class="network-name">Google</span>
                 </a>
               </li>
             </ul>
@@ -198,7 +199,7 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <ul class="list-inline">
+        <!-- <ul class="list-inline">
           <li class="list-inline-item">
             <a href="#">Quiénes somos</a>
           </li>
@@ -214,9 +215,9 @@
           <li class="list-inline-item">
             <a href="#contact">Contacto</a>
           </li>
-        </ul>
-        <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
-      </div>
+        </ul>   quito esto para que no me aparezca los botones de abajo--> 
+        <p class="copyright text-muted small"> &copy;2017 Estrena Siempre-Alquiler de vestidos de fiesta </p>
+      </div> 
     </footer>
 
     <!-- Bootstrap core JavaScript -->
